@startuml CSR_Volunteer_Matching_System_ERD

!define TABLE_COLOR #E3F2FD
!define KEY_COLOR #FFF59D
!define RELATION_COLOR #90CAF9

skinparam entity {
    BackgroundColor TABLE_COLOR
    BorderColor #1976D2
    FontName Arial
}

skinparam class {
    BackgroundColor TABLE_COLOR
    BorderColor #1976D2
}

' ====================
' CORE ENTITIES
' ====================

entity UserProfile {
    * id : UUID <<PK>>
    --
    * name : VARCHAR(100) <<UNIQUE>>
    description : TEXT
    permissions : JSON
    * isActive : BOOLEAN
    * createdAt : TIMESTAMP
    * updatedAt : TIMESTAMP
    --
    <<Static 4 Records Only>>
}

entity UserAccount {
    * id : UUID <<PK>>
    --
    * email : VARCHAR(255) <<UNIQUE>>
    * password : VARCHAR(255)
    * name : VARCHAR(255)
    phoneNumber : VARCHAR(20)
    address : TEXT
    dateOfBirth : DATE
    * status : UserStatus
    * userProfileId : UUID <<FK>>
    --
    ' PIN-specific fields
    age : INTEGER
    location : VARCHAR(255)
    accessibilityNeeds : TEXT
    profilePhoto : VARCHAR(500)
    --
    ' CSR Rep-specific fields
    companyName : VARCHAR(255)
    companyRegistrationNumber : VARCHAR(100) <<UNIQUE>>
    industry : VARCHAR(100)
    contactPerson : VARCHAR(255)
    companyAddress : TEXT
    companyLogo : VARCHAR(500)
    --
    ' Platform Manager-specific fields
    department : VARCHAR(100)
    --
    * profileStatus : ProfileStatus
    * createdAt : TIMESTAMP
    * updatedAt : TIMESTAMP
}


' ====================
' SERVICE MANAGEMENT
' ====================

entity RequestCategory {
    * id : UUID <<PK>>
    --
    * name : VARCHAR(100) <<UNIQUE>>
    description : TEXT
    iconUrl : VARCHAR(500)
    * isActive : BOOLEAN
    * createdAt : TIMESTAMP
    * updatedAt : TIMESTAMP
}

entity Request {
    * id : UUID <<PK>>
    --
    * pinId : UUID <<FK>>
    * categoryId : UUID <<FK>>
    * title : VARCHAR(255)
    * description : TEXT
    * urgency : UrgencyLevel
    dateNeeded : TIMESTAMP
    location : VARCHAR(255)
    * status : RequestStatus
    * viewCount : INTEGER
    * shortlistCount : INTEGER
    * createdAt : TIMESTAMP
    * updatedAt : TIMESTAMP
}

' ====================
' MATCHING SYSTEM
' ====================

entity Shortlist {
    * id : UUID <<PK>>
    --
    * csrRepId : UUID <<FK>>
    * requestId : UUID <<FK>>
    * createdAt : TIMESTAMP
    --
    <<UNIQUE(csrRepId, requestId)>>
}

entity VolunteerOffer {
    * id : UUID <<PK>>
    --
    * csrRepId : UUID <<FK>>
    * requestId : UUID <<FK>>
    message : TEXT
    * status : OfferStatus
    * createdAt : TIMESTAMP
    * updatedAt : TIMESTAMP
}

entity Match {
    * id : UUID <<PK>>
    --
    * requestId : UUID <<FK>> <<UNIQUE>>
    * csrRepId : UUID <<FK>>
    * pinId : UUID <<FK>>
    * status : MatchStatus
    * matchedAt : TIMESTAMP
    completedAt : TIMESTAMP
    cancellationReason : TEXT
    * updatedAt : TIMESTAMP
}

' ====================
' NOTIFICATIONS
' ====================

entity Notification {
    * id : UUID <<PK>>
    --
    * userId : UUID <<FK>>
    * type : NotificationType
    * message : TEXT
    * isRead : BOOLEAN
    * createdAt : TIMESTAMP
    --
    <<Cascading Delete Enabled>>
}

' ====================
' RELATIONSHIPS
' ====================

' UserProfile <-> UserAccount (1:M)
UserProfile ||--o{ UserAccount : "has role"


' UserAccount <-> Notification (1:M)
UserAccount ||--o{ Notification : "receives"

' UserAccount Relationships (1:M)
' When userProfile.role = PIN:
UserAccount ||--o{ Request : "creates (PIN)"
UserAccount ||--o{ Match : "receives help (PIN)"

' When userProfile.role = CSR_REP:
UserAccount ||--o{ Shortlist : "saves (CSR)"
UserAccount ||--o{ VolunteerOffer : "makes (CSR)"
UserAccount ||--o{ Match : "provides help (CSR)"

' RequestCategory <-> Request (1:M)
RequestCategory ||--o{ Request : "categorizes"

' Request Relationships
Request ||--o{ Shortlist : "saved by"
Request ||--o{ VolunteerOffer : "receives"
Request ||--o| Match : "matched with"

' ====================
' NOTES & CONSTRAINTS
' ====================

@enduml
